--- a/.github/workflows/go-test-coverage.yml
+++ b/.github/workflows/go-test-coverage.yml
@@ -29,9 +29,6 @@ jobs:
         run: |
           go test ./... -coverprofile=coverage.out -covermode=atomic
 
-      - name: Upload coverage report
-        uses: codecov/codecov-action@v4
-        with:
-          files: coverage.out
-          fail_ci_if_error: true
-          verbose: true
+      - name: Display coverage report
+        run: |
+          go tool cover -func=coverage.out
