--- a/.github/workflows/go-test-coverage.yml
+++ b/.github/workflows/go-test-coverage.yml
@@ -29,6 +29,12 @@ jobs:
         run: |
           go test ./... -coverprofile=coverage.out -covermode=atomic
 
-      - name: Display coverage report
+      - name: Generate HTML coverage report
         run: |
-          go tool cover -func=coverage.out
+          go tool cover -html=coverage.out -o coverage.html
+
+      - name: Upload coverage report as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: coverage.html
