--- a/.github/workflows/go-test-coverage.yml
+++ b/.github/workflows/go-test-coverage.yml
@@ -13,9 +13,12 @@ jobs:
     name: Run Go Tests
     runs-on: ubuntu-latest
 
+    env: 
+        RUNNER_TOOL_CACHE: /toolcache # Runner Tool Cache
     steps:
       - name: Check out code
         uses: actions/checkout@v4
+
 
       - name: Set up Go
         uses: actions/setup-go@v5
