--- a/.github/workflows/go-test-coverage.yml
+++ b/.github/workflows/go-test-coverage.yml
@@ -35,5 +35,9 @@ jobs:
       - name: Generate HTML coverage report
         run: |
           go tool cover -html=coverage.out -o coverage.html
-
- 
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v4
+        with:
+            name: coverage-report
+            path: coverage.html
+            retention-days: 7  # Keeps the report for 7 days
