--- a/.github/workflows/go-test-coverage.yml
+++ b/.github/workflows/go-test-coverage.yml
@@ -42,4 +42,4 @@ jobs:
       - name: Upload Coverage Report Artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: coverage.html
+          path: public/
