--- a/.github/workflows/go-test-coverage.yml
+++ b/.github/workflows/go-test-coverage.yml
@@ -36,7 +36,7 @@ jobs:
           cd backend
           go test ./... -coverprofile=coverage.out -covermode=atomic
           mkdir -p public
-          go tool cover -html=coverage.out -o public/index.html  # Use index.html for default page
+          go tool cover -html=coverage.out -o ../public/index.html  # Use index.html for default page
 
       - name: Deploy Coverage Report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
